my-app-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-php-app
spec:
  replicas: 1
  selector:
     matchLabels:
        app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        # Create the shared files volume to be used in both pods
        - name: app-files
          hostPath:
            path: /opt/hw2/app
            type: Directory
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - name: backend
          image: nginx
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-files
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
        - name: php-fpm
          image: ivekov/php-fpm
          imagePullPolicy: Never
          volumeMounts:
            - name: app-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
