my-app-chart/templates/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
      tier: backend
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: backend
    spec:
      volumes:
      - name: phpmyadmin
        emptyDir: {}
      - name: config
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin:4.7
        resources:
          requests:
            memory: 50Mi
            cpu: 50m
          limits:
            memory: 100Mi
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: default

spec:
  selector:
    app: phpmyadmin
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32443
