my-app-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-php-app-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: web
