my-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-php-app-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: my-php-app-service
            port:
              number: 80
      - path: /phpmyadmin
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
